--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node ./dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "generate-client": "openapi --input ./swagger-petstore.json --output ./src/client --client axios"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "inquirer": "^9.1.4"
   },
   "devDependencies": {
+    "openapi-typescript-codegen": "^0.20.1",
     "@types/node": "^18.14.6",
     "typescript": "^4.9.5",
     "form-data": "^4.0.0",
