--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node ./dist/index.js",
+    "debug": "ts-node ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate-client": "openapi --input ./swagger-petstore.json --output ./src/client --client axios"
   },
@@ -25,18 +26,30 @@
   },
   "homepage": "https://github.com/tandt53/auto-api#readme",
   "dependencies": {
+    "@apidevtools/swagger-parser": "^10.0.3",
+    "@apidevtools/json-schema-ref-parser": "^10.1.0",
+    "@readme/openapi-parser": "^2.4.0",
     "@types/commander": "^2.12.2",
     "@types/inquirer": "^9.0.3",
     "chalk": "^5.2.0",
     "commander": "^10.0.0",
     "figlet": "^1.5.2",
-    "inquirer": "^9.1.4"
+    "inquirer": "^9.1.4",
+    "openapi-types": "^12.1.0",
+    "json-schema-to-typescript": "^12.0.0",
+    "json-schema-faker": "^0.5.0-rcv.46"
   },
   "devDependencies": {
-    "openapi-typescript-codegen": "^0.20.1",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.14.6",
-    "typescript": "^4.9.5",
+    "axios": "^1.2.2",
+    "chai": "^4.3.7",
     "form-data": "^4.0.0",
-    "axios": "^1.2.2"
+    "mocha": "^10.2.0",
+    "openapi": "^2.0.0-14",
+    "openapi-typescript-codegen": "^0.20.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
