--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node ./dist/index.js",
     "debug": "ts-node ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "generate-client": "openapi --input ./openapi.json --output src/httpclient --client axios"
+    "generate-client": "openapi --input ./openapi.json --output src/reference --client axios"
   },
   "repository": {
     "type": "git",
