--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "json-schema-to-typescript": "^12.0.0",
     "json-schema-faker": "^0.5.0-rcv.46",
     "json-schema": "^0.4.0",
-    "openapi-types": "^12.1.0"
+    "openapi-types": "^12.1.0",
+    "qs": "^6.11.1"
   },
   "devDependencies": {
     "@types/chai": "^4.3.4",
