--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "openapi-typescript-codegen": "^0.20.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
-    "fast-xml-parser": "^4.1.3"
+    "fast-xml-parser": "^4.1.3",
+    "axios-curlirize": "2.0.0"
   }
 }
