--- a/package.json
+++ b/package.json
@@ -26,33 +26,27 @@
   },
   "homepage": "https://github.com/tandt53/auto-api#readme",
   "dependencies": {
-    "@apidevtools/json-schema-ref-parser": "^10.1.0",
-    "@apidevtools/swagger-parser": "^10.0.3",
-    "@readme/openapi-parser": "^2.4.0",
-    "@types/commander": "^2.12.2",
-    "@types/inquirer": "^9.0.3",
-    "chalk": "^5.2.0",
-    "commander": "^10.0.0",
-    "figlet": "^1.5.2",
-    "inquirer": "^9.1.4",
-    "json-schema": "^0.4.0",
-    "json-schema-faker": "^0.5.0-rcv.46",
-    "json-schema-to-typescript": "^12.0.0",
-    "openapi-types": "^12.1.0",
-    "qs": "^6.11.1"
+    "@types/node": "18.14.6",
+    "@apidevtools/swagger-parser": "10.0.3",
+    "@types/commander": "2.12.2",
+    "@types/inquirer": "9.0.3",
+    "commander": "10.0.0",
+    "figlet": "1.5.2",
+    "inquirer": "9.1.4",
+    "openapi-types": "12.1.0",
+    "axios": "1.3.6",
+    "fast-xml-parser": "4.2.2",
+    "typescript": "5.0.4",
+    "form-data": "4.0.0",
+    "qs": "6.11.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.4",
-    "@types/expect": "^24.3.0",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.14.6",
-    "axios": "^1.2.2",
-    "chai": "^4.3.7",
-    "form-data": "^4.0.0",
-    "mocha": "^10.2.0",
-    "openapi-typescript-codegen": "^0.20.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "fast-xml-parser": "^4.1.3"
+    "@types/chai": "4.3.4",
+    "@types/expect": "24.3.0",
+    "@types/mocha": "10.0.1",
+    "chai": "4.3.7",
+    "mocha": "10.2.0",
+    "openapi-typescript-codegen": "0.20.1",
+    "ts-node": "10.9.1"
   }
 }
