--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "this is cli for running API tests automatically",
   "main": "index.js",
   "scripts": {
+    "install": "npm install",
     "build": "npx tsc",
     "start": "node ./dist/index.js",
-    "debug": "ts-node ./src/index.ts",
+    "debug": "ts-node  -r tsconfig-paths/register ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "generate-client": "openapi --input ./openapi.json --output src/reference --client axios"
   },
@@ -26,23 +27,27 @@
   },
   "homepage": "https://github.com/tandt53/auto-api#readme",
   "dependencies": {
-    "@types/node": "18.14.6",
+    "@apidevtools/json-schema-ref-parser": "10.1.0",
     "@apidevtools/swagger-parser": "10.0.3",
     "@types/commander": "2.12.2",
     "@types/inquirer": "9.0.3",
+    "@types/node": "18.14.6",
+    "axios": "1.3.6",
     "commander": "10.0.0",
+    "fast-xml-parser": "4.2.2",
     "figlet": "1.5.2",
+    "form-data": "4.0.0",
     "inquirer": "9.1.4",
     "openapi-types": "12.1.0",
-    "axios": "1.3.6",
-    "fast-xml-parser": "4.2.2",
-    "typescript": "5.0.4",
-    "form-data": "4.0.0",
-    "qs": "6.11.1"
+    "qs": "6.11.1",
+    "registry.npmjs.org": "^1.0.1",
+    "tsconfig-paths": "3.12.0",
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "@types/chai": "4.3.4",
     "@types/expect": "24.3.0",
+    "@types/js-yaml": "4.0.5",
     "@types/mocha": "10.0.1",
     "chai": "4.3.7",
     "mocha": "10.2.0",
