fix the problem of checking var

--- a/data/post-user.yaml
+++ b/data/post-user.yaml
@@ -48,7 +48,7 @@ steps:
     request:
       path: '/user'
       method: POST
-      url: https://petstore.swagger.io/v3
+      url: https://petstore3.swagger.io/api/v3
       cookies:
       headers:
       query:
