--- a/package.json
+++ b/package.json
@@ -28,31 +28,26 @@
   "homepage": "https://github.com/tandt53/auto-api#readme",
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "10.1.0",
-    "@apidevtools/swagger-parser": "10.0.3",
-    "@types/commander": "2.12.2",
-    "@types/inquirer": "9.0.3",
-    "@types/node": "18.14.6",
-    "axios": "1.3.6",
-    "commander": "10.0.0",
-    "fast-xml-parser": "4.2.5",
-    "figlet": "1.5.2",
-    "form-data": "4.0.0",
-    "inquirer": "9.1.4",
-    "jsonpath": "1.1.1",
-    "openapi-types": "12.1.0",
-    "qs": "6.11.1",
-    "registry.npmjs.org": "^1.0.1",
-    "tsconfig-paths": "3.12.0",
-    "typescript": "5.0.4"
-  },
-  "devDependencies": {
+    "@apidevtools/swagger-parser": "10.1.0",
     "@types/chai": "4.3.4",
-    "@types/expect": "24.3.0",
+    "@types/inquirer": "9.0.3",
     "@types/js-yaml": "4.0.5",
     "@types/mocha": "10.0.1",
+    "@types/node": "18.14.6",
+    "axios": "1.4.0",
     "chai": "4.3.7",
+    "commander": "11.0.0",
+    "fast-xml-parser": "4.2.5",
+    "figlet": "1.6.0",
+    "form-data": "4.0.0",
+    "inquirer": "9.2.7",
+    "jsonpath": "1.1.1",
     "mocha": "10.2.0",
-    "openapi-typescript-codegen": "0.20.1",
-    "ts-node": "10.9.1"
+    "openapi-types": "12.1.3",
+    "qs": "6.11.1",
+    "registry.npmjs.org": "^1.0.1",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.0.4"
   }
 }
