--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -5,5 +5,6 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - name: Lint Action
-        uses: wearerequired/lint-action@v2.3.0
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+#      - name: Lint Action
+#        uses: wearerequired/lint-action@v2.3.0
