--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npx tsc",
     "start": "node ./dist/index.js",
     "debug": "ts-node  -r tsconfig-paths/register ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ",
     "generate-client": "openapi --input ./openapi.json --output src/reference --client axios"
   },
   "repository": {
@@ -34,13 +34,13 @@
     "@types/js-yaml": "4.0.5",
     "@types/mocha": "10.0.1",
     "@types/node": "18.14.6",
-    "axios": "1.4.0",
-    "chai": "4.3.7",
-    "commander": "11.0.0",
-    "fast-xml-parser": "4.2.5",
-    "figlet": "1.6.0",
+    "axios": "1.7.7",
+    "chai": "5.1.1",
+    "commander": "12.1.0",
+    "fast-xml-parser": "4.5.0",
+    "figlet": "1.7.0",
     "form-data": "4.0.0",
-    "inquirer": "9.2.7",
+    "inquirer": "10.2.0",
     "jsonpath": "1.1.1",
     "mocha": "10.2.0",
     "openapi-types": "12.1.3",
